<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/toolbar_layout"/>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.iicsdms.tris.iicsdms2.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingTop="20dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.07">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">


            </RelativeLayout>

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                android:layout_weight="0.07"
                app:srcCompat="@drawable/profile_icon"
                android:layout_marginLeft="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/fullName"
                style="@style/fullName_style"
                android:text="@string/fullName"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/profileImage"
                android:layout_marginLeft="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/emailHolder"
                    style="@style/profileTextHolder_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email" />

                <TextView
                    android:id="@+id/email"
                    style="@style/profileText_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/departmentHolder"
                    style="@style/profileTextHolder_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Department" />

                <TextView
                    android:id="@+id/department"
                    style="@style/profileText_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department" />


                <TextView
                    android:id="@+id/facultytHolder"
                    style="@style/profileTextHolder_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Faculty no." />

                <TextView
                    android:id="@+id/faculty"
                    style="@style/profileText_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department" />

                <TextView
                    android:id="@+id/contactHolder"
                    style="@style/profileTextHolder_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact no." />

                <TextView
                    android:id="@+id/contact"
                    style="@style/profileText_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/department" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>

</LinearLayout>
